chandeliers-lus/tests/fail/ui/tc/extern/no-default-node.rs
#[allow(non_camel_case_types)]
struct no_default {}
chandeliers_lus::decl! {
    extern node no_default() returns ();
}

fn main() {}
